refactor(core): optimize lifecycle, sanitize memory, harden netty, brigadier and update pipelines