@@ -3,6 +3,7 @@ package ru.milkyway.plugmanreloaded.managers;
 import org.bukkit.Bukkit;
 import org.bukkit.plugin.Plugin;
 import org.bukkit.plugin.PluginDescriptionFile;
+import org.bukkit.plugin.PluginManager;
 import org.jetbrains.annotations.Nullable;
 import ru.milkyway.plugmanreloaded.PlugManReloaded;
 import ru.milkyway.plugmanreloaded.api.DependencyNode;
@@ -26,11 +27,23 @@ public class DependencyManager {
     }
 
     public Map<String, DependencyNode> buildGraph(boolean includeSoftDepends) {
+        if (Bukkit.getServer() == null) {
+            return Collections.emptyMap();
+        }
+        PluginManager pm = Bukkit.getPluginManager();
+        if (pm == null) {
+            return Collections.emptyMap();
+        }
+        Plugin[] plugins = pm.getPlugins();
+        if (plugins == null) {
+            return Collections.emptyMap();
+        }
+
         Map<String, DependencyNode> graph = new HashMap<>();
         Map<String, List<DependencyNode>> providesMap = new HashMap<>();
 
-        for (Plugin p : Bukkit.getPluginManager().getPlugins()) {
-            if (p == null) continue;
+        for (Plugin p : plugins) {
+            if (p == null || p.getName() == null || p.getName().isBlank()) continue;
             DependencyNode node = new DependencyNode(p.getName());
             graph.put(p.getName().toLowerCase(Locale.ROOT), node);
 
@@ -46,8 +59,8 @@ public class DependencyManager {
             readPaperMetaProvides(p, node, providesMap);
         }
 
-        for (Plugin p : Bukkit.getPluginManager().getPlugins()) {
-            if (p == null) continue;
+        for (Plugin p : plugins) {
+            if (p == null || p.getName() == null || p.getName().isBlank()) continue;
             String nameLower = p.getName().toLowerCase(Locale.ROOT);
             DependencyNode node = graph.get(nameLower);
             if (node == null) continue;
@@ -55,28 +68,34 @@ public class DependencyManager {
             PluginDescriptionFile desc = p.getDescription();
 
             if (desc != null) {
-                for (String dep : desc.getDepend()) {
-                    if (dep == null || dep.isBlank()) continue;
-                    node.addHardDependency(dep);
-                    for (DependencyNode depNode : resolveNodes(graph, providesMap, dep)) {
-                        depNode.addDependent(p.getName());
+                List<String> depends = desc.getDepend();
+                if (depends != null) {
+                    for (String dep : depends) {
+                        if (dep == null || dep.isBlank() || dep.equalsIgnoreCase(p.getName())) continue;
+                        node.addHardDependency(dep);
+                        for (DependencyNode depNode : resolveNodes(graph, providesMap, dep)) {
+                            depNode.addDependent(p.getName());
+                        }
                     }
                 }
             }
 
             if (includeSoftDepends && desc != null) {
-                for (String sdep : desc.getSoftDepend()) {
-                    if (sdep == null || sdep.isBlank()) continue;
-                    node.addSoftDependency(sdep);
-                    for (DependencyNode sdepNode : resolveNodes(graph, providesMap, sdep)) {
-                        sdepNode.addDependent(p.getName());
+                List<String> softDepends = desc.getSoftDepend();
+                if (softDepends != null) {
+                    for (String sdep : softDepends) {
+                        if (sdep == null || sdep.isBlank() || sdep.equalsIgnoreCase(p.getName())) continue;
+                        node.addSoftDependency(sdep);
+                        for (DependencyNode sdepNode : resolveNodes(graph, providesMap, sdep)) {
+                            sdepNode.addDependent(p.getName());
+                        }
                     }
                 }
             }
 
             if (includeSoftDepends && desc != null && desc.getLoadBefore() != null) {
                 for (String before : desc.getLoadBefore()) {
-                    if (before == null || before.isBlank()) continue;
+                    if (before == null || before.isBlank() || before.equalsIgnoreCase(p.getName())) continue;
                     node.addDependent(before);
                     for (DependencyNode beforeNode : resolveNodes(graph, providesMap, before)) {
                         beforeNode.addSoftDependency(p.getName());
@@ -117,6 +136,9 @@ public class DependencyManager {
             Object meta = ReflectionHelper.invokeMethod(p, "getPluginMeta");
             if (meta == null) return;
             Object provided = ReflectionHelper.invokeMethod(meta, "getProvidedPlugins");
+            if (provided == null) {
+                provided = ReflectionHelper.invokeMethod(meta, "getProvides");
+            }
             if (provided instanceof Iterable<?> iterable) {
                 for (Object o : iterable) {
                     String prov = extractDescriptorName(o);
@@ -140,7 +162,7 @@ public class DependencyManager {
             if (hardDeps instanceof Iterable<?> iterable) {
                 for (Object o : iterable) {
                     String depName = extractDescriptorName(o);
-                    if (depName != null && !depName.isBlank()) {
+                    if (depName != null && !depName.isBlank() && !depName.equalsIgnoreCase(p.getName())) {
                         node.addHardDependency(depName);
                         for (DependencyNode depNode : resolveNodes(graph, providesMap, depName)) {
                             depNode.addDependent(p.getName());
@@ -154,7 +176,7 @@ public class DependencyManager {
                 if (softDeps instanceof Iterable<?> iterable) {
                     for (Object o : iterable) {
                         String depName = extractDescriptorName(o);
-                        if (depName != null && !depName.isBlank()) {
+                        if (depName != null && !depName.isBlank() && !depName.equalsIgnoreCase(p.getName())) {
                             node.addSoftDependency(depName);
                             for (DependencyNode depNode : resolveNodes(graph, providesMap, depName)) {
                                 depNode.addDependent(p.getName());
@@ -167,7 +189,7 @@ public class DependencyManager {
                 if (loadBefore instanceof Iterable<?> iterable) {
                     for (Object o : iterable) {
                         String beforeName = extractDescriptorName(o);
-                        if (beforeName != null && !beforeName.isBlank()) {
+                        if (beforeName != null && !beforeName.isBlank() && !beforeName.equalsIgnoreCase(p.getName())) {
                             node.addDependent(beforeName);
                             for (DependencyNode beforeNode : resolveNodes(graph, providesMap, beforeName)) {
                                 beforeNode.addSoftDependency(p.getName());
@@ -198,26 +220,38 @@ public class DependencyManager {
     }
 
     public Set<String> getDependents(@Nullable String pluginName, boolean includeSoftDepends) {
-        if (pluginName == null) return Collections.emptySet();
+        if (pluginName == null || pluginName.isBlank()) return Collections.emptySet();
         return getDependents(pluginName, buildGraph(includeSoftDepends));
     }
 
     public Set<String> getDependents(@Nullable String pluginName, Map<String, DependencyNode> graph) {
-        if (pluginName == null || graph == null) return Collections.emptySet();
+        if (pluginName == null || pluginName.isBlank() || graph == null || graph.isEmpty()) return Collections.emptySet();
         DependencyNode node = graph.get(pluginName.toLowerCase(Locale.ROOT));
         if (node == null) return Collections.emptySet();
 
-        Set<String> allDependents = new HashSet<>();
+        Set<String> allDependents = new LinkedHashSet<>();
         collectAllDependents(node, graph, allDependents);
         return allDependents;
     }
 
     private void collectAllDependents(DependencyNode current, Map<String, DependencyNode> graph, Set<String> visited) {
+        Set<String> visitedLower = new HashSet<>();
+        for (String v : visited) {
+            visitedLower.add(v.toLowerCase(Locale.ROOT));
+        }
+        collectAllDependentsInternal(current, graph, visited, visitedLower);
+    }
+
+    private void collectAllDependentsInternal(DependencyNode current, Map<String, DependencyNode> graph,
+                                              Set<String> visited, Set<String> visitedLower) {
         for (String depName : current.getDependents()) {
-            if (visited.add(depName)) {
-                DependencyNode next = graph.get(depName.toLowerCase(Locale.ROOT));
+            if (depName == null || depName.isBlank()) continue;
+            String lower = depName.toLowerCase(Locale.ROOT);
+            if (visitedLower.add(lower)) {
+                visited.add(depName);
+                DependencyNode next = graph.get(lower);
                 if (next != null) {
-                    collectAllDependents(next, graph, visited);
+                    collectAllDependentsInternal(next, graph, visited, visitedLower);
                 }
             }
         }
@@ -238,19 +272,27 @@ public class DependencyManager {
     }
 
     public List<String> calculateCascadeOrder(String rootPluginName, boolean includeSoftDepends) {
+        if (rootPluginName == null || rootPluginName.isBlank()) {
+            return Collections.emptyList();
+        }
         Map<String, DependencyNode> fullGraph = buildGraph(includeSoftDepends);
 
-        DependencyNode rootNode = fullGraph.get(rootPluginName.toLowerCase(Locale.ROOT));
-        Set<String> affectedPlugins = new HashSet<>();
-        affectedPlugins.add(rootPluginName);
+        String rootLower = rootPluginName.toLowerCase(Locale.ROOT);
+        DependencyNode rootNode = fullGraph.get(rootLower);
+        Set<String> affectedPlugins = new LinkedHashSet<>();
+        String canonicalRootName = rootNode != null ? rootNode.getName() : rootPluginName;
+        affectedPlugins.add(canonicalRootName);
 
         if (rootNode != null) {
             collectAllDependents(rootNode, fullGraph, affectedPlugins);
         }
 
-        Set<String> affectedLower = new HashSet<>();
+        Map<String, String> originalNames = new HashMap<>();
+        Set<String> affectedLower = new LinkedHashSet<>();
         for (String p : affectedPlugins) {
-            affectedLower.add(p.toLowerCase(Locale.ROOT));
+            String lower = p.toLowerCase(Locale.ROOT);
+            affectedLower.add(lower);
+            originalNames.putIfAbsent(lower, p);
         }
 
         Map<String, Set<String>> inDegree = new HashMap<>();
@@ -266,7 +308,7 @@ public class DependencyManager {
             if (node != null) {
                 for (String dep : node.getHardDependencies()) {
                     String depLower = dep.toLowerCase(Locale.ROOT);
-                    if (affectedLower.contains(depLower)) {
+                    if (affectedLower.contains(depLower) && !depLower.equals(pLower)) {
                         inDegree.get(pLower).add(depLower);
                         adj.get(depLower).add(pLower);
                     }
@@ -274,7 +316,7 @@ public class DependencyManager {
                 if (includeSoftDepends) {
                     for (String sdep : node.getSoftDependencies()) {
                         String sdepLower = sdep.toLowerCase(Locale.ROOT);
-                        if (affectedLower.contains(sdepLower)) {
+                        if (affectedLower.contains(sdepLower) && !sdepLower.equals(pLower)) {
                             inDegree.get(pLower).add(sdepLower);
                             adj.get(sdepLower).add(pLower);
                         }
@@ -291,10 +333,13 @@ public class DependencyManager {
         }
 
         List<String> order = new ArrayList<>();
+        Set<String> addedLower = new HashSet<>();
         while (!queue.isEmpty()) {
             String current = queue.poll();
-            DependencyNode node = fullGraph.get(current);
-            order.add(node != null ? node.getName() : current);
+            if (addedLower.add(current)) {
+                DependencyNode node = fullGraph.get(current);
+                order.add(node != null ? node.getName() : originalNames.getOrDefault(current, current));
+            }
 
             Set<String> dependents = adj.get(current);
             if (dependents != null) {
@@ -312,22 +357,20 @@ public class DependencyManager {
 
         List<String> leftover = new ArrayList<>();
         for (String p : affectedPlugins) {
-            boolean found = false;
-            for (String added : order) {
-                if (added.equalsIgnoreCase(p)) {
-                    found = true;
-                    break;
-                }
-            }
-            if (!found) {
+            if (!addedLower.contains(p.toLowerCase(Locale.ROOT))) {
                 leftover.add(p);
             }
         }
         leftover.sort(String.CASE_INSENSITIVE_ORDER);
-        order.addAll(leftover);
+        for (String p : leftover) {
+            if (addedLower.add(p.toLowerCase(Locale.ROOT))) {
+                order.add(p);
+            }
+        }
 
         return order;
     }
+
     public List<Plugin> sortPluginsTopologically(@Nullable Collection<Plugin> plugins) {
         return sortByDependencies(plugins, Plugin::getName);
     }
@@ -410,7 +453,7 @@ public class DependencyManager {
     private static void linkWithin(Set<String> affected, String owner, String dependency,
                                    Map<String, Set<String>> waitingFor, Map<String, Set<String>> unblocks) {
         String key = dependency.toLowerCase(Locale.ROOT);
-        if (affected.contains(key)) {
+        if (affected.contains(key) && !key.equals(owner)) {
             waitingFor.get(owner).add(key);
             unblocks.get(key).add(owner);
         }
@@ -435,8 +478,8 @@ public class DependencyManager {
         }
 
         for (String name : known) {
-            link(name, graph.hardDeps().getOrDefault(name, List.of()), graph, known, waitingFor, unblocks);
-            link(name, graph.softDeps().getOrDefault(name, List.of()), graph, known, waitingFor, unblocks);
+            link(name, graph.hardDeps().getOrDefault(name, Collections.emptyList()), graph, known, waitingFor, unblocks);
+            link(name, graph.softDeps().getOrDefault(name, Collections.emptyList()), graph, known, waitingFor, unblocks);
         }
 
         List<PluginJarIndex.JarInfo> sorted = drain(graph.byKey(), waitingFor, unblocks);
@@ -459,30 +502,36 @@ public class DependencyManager {
             PluginJarIndex.JarDescriptor desc = PluginJarIndex.readDescriptor(info.file());
             if (desc == null) continue;
 
-            for (String provided : desc.provides()) {
-                if (provided != null && !provided.isBlank()) {
-                    provides.computeIfAbsent(provided.toLowerCase(Locale.ROOT), unused -> new ArrayList<>()).add(key);
+            List<String> providesList = desc.provides();
+            if (providesList != null) {
+                for (String provided : providesList) {
+                    if (provided != null && !provided.isBlank()) {
+                        provides.computeIfAbsent(provided.toLowerCase(Locale.ROOT), unused -> new ArrayList<>()).add(key);
+                    }
                 }
             }
-            hardDeps.put(key, desc.depend());
-            softDeps.put(key, desc.softDepend());
+            hardDeps.put(key, desc.depend() != null ? desc.depend() : Collections.emptyList());
+            softDeps.put(key, desc.softDepend() != null ? desc.softDepend() : Collections.emptyList());
         }
         return new JarGraph(byKey, provides, hardDeps, softDeps);
     }
 
     private static void link(String owner, List<String> dependencies, JarGraph graph, Set<String> known,
                              Map<String, Set<String>> waitingFor, Map<String, Set<String>> unblocks) {
+        if (dependencies == null) return;
         for (String dependency : dependencies) {
             if (dependency == null || dependency.isBlank()) continue;
 
             String key = dependency.toLowerCase(Locale.ROOT);
+            if (key.equals(owner)) continue;
+
             if (known.contains(key)) {
                 waitingFor.get(owner).add(key);
                 unblocks.get(key).add(owner);
                 continue;
             }
-            for (String provider : graph.provides().getOrDefault(key, List.of())) {
-                if (known.contains(provider)) {
+            for (String provider : graph.provides().getOrDefault(key, Collections.emptyList())) {
+                if (!provider.equals(owner) && known.contains(provider)) {
                     waitingFor.get(owner).add(provider);
                     unblocks.get(provider).add(owner);
                 }
@@ -534,4 +583,3 @@ public class DependencyManager {
         }
     }
 }
-
